finsihed html css and js files. Done

--- a/ninjas.html
+++ b/ninjas.html
@@ -16,6 +16,26 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme">
     </head>
     <body>
+        <div id="header">
+            <h1>JQuery - assignment 1</h1>
+        <div>
+        <div id="ninjas">
+            <ul>
+                <li><img id="ninja1" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja2" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja3" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja4" src="images/ninja.png" alt="ninja image"></li>
+            </ul>
+            <ul>
+                <li><img id="ninja5" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja6" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja7" src="images/ninja.png" alt="ninja image"></li>
+                <li><img id="ninja8" src="images/ninja.png" alt="ninja image"></li>
+            </ul>                
+        </div>
+        <div id="footer">
+            <button id="restorebutton">Restore</button>
+        </div>
     </body>
     <footer>
     </footer>
